[package]
name = "ceserver"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
blanket = "0.4.0"
byteorder = "1.5.0"
env_logger = "0.11.5"
log = "0.4.22"
num-traits = "0.2.17"
num_enum = "0.7.1"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
hex-literal = "1.0.0"
futures = "0.3.31"
